# nitrovia-research-agent

./: .gitignore  MAINTENANCE.md  PROJECT_SPEC.md  README.md  docker-compose.yml  nitrovia-overview.pptx
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: analytics.py  auth.py  chat.py  config_api.py  deps.py  files.py  health.py  reports.py
backend/app/llm/: __init__.py  config.py  gateway.py  retry.py  router.py  token_counter.py
backend/app/models/: document.py  llm_outputs.py  schemas.py
backend/app/services/: analytics_data_service.py  analytics_renderer.py  chart_generator.py  code_executor.py  context_builder.py  document_parser.py  docx_renderer.py  embedding_service.py  finance_metrics_calculator.py  generic_data_extractor.py  google_drive.py  llm_service.py  metrics_calculator.py  mode_manager.py  pdf_renderer.py  pptx_renderer.py  quota.py  report_generator.py  research_planner.py  schema_inference_service.py  sheet_scanner.py  supabase.py
backend/logs/: .gitkeep
backend/migrations/: 001_add_pgvector_document_chunks.sql  002_add_user_quotas.sql  003_analytics_tables.sql  004_finance_tables.sql
backend/prompts/: README.md  context_summarization.txt  detail_levels.txt  finance_analytics.txt  presentation_generation.txt  report_generation.txt  research_agent.txt  sales_analytics.txt  schema_inference.txt  section_edit.txt  skill_planning.txt
backend/tests/: test_document_parsing.py  test_workflow_e2e.py  test_workflow_outputs.py
docs/: DEPLOYMENT.md  (+1 more)
(+87 files in other folders)
